[metadata]
name = ds_algo
version = 1.0
author=maverick
author_email=maverick@github.com
license=M.I.T

[options]
packages = find:

[options.packages.find] (always `find` even if `find_namespaces:` was used before)
# This section is optional
# Each entry in this section is optional, and if not specified, the default values are:
where=src
include=*
exclude=